<resources>
    <string name="app_name">JavaBall</string>

    <string name="action_settings">Settings</string>
    <string name="refereeInfo">Referee Info</string>
    <string name="title_activity_activity_referee_profile">Referee Profile</string>
    <string name="editRefereeDetails">Edit</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="refereeQualification">Qualification</string>
    <string name="refereeHomeLocality">Home</string>
    <string name="refereeVisitLocality">Visit</string>
    <string name="NJB">NJB</string>
    <string name="IJB">IJB</string>
    <string name="North">North</string>
    <string name="Center">Central</string>
    <string name="South">South</string>
    <string name="createReferee">Create Referee</string>
    <string name="refereeFullName">FullName</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="level">level</string>
    <string name="matches">Matches</string>
    <string name="createMatch">Create Match</string>
    <string name="weekNumber">Week Number</string>
    <string name="matchDetails">Match Details</string>
    <string name="area">Area</string>
    <string name="junior">Junior</string>
    <string name="senior">Senior</string>
    <string name="suitableReferees">Suitable Referees</string>
    <string name="exit">Exit</string>
    <string name="availableReferees">Available Referees</string>
    <string name="type_a_name">Type a name</string>
    <string name="viewBarChart">Bar Chart</string>
    <string name="refereeID">Referee ID</string>
    <string name="numOfAllocatedMatches">Allocated Matches</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_edit_referee_profile">Edit Referee Profile</string>
    <string name="title_activity_activity_create_referee">Create Referee</string>
    <string name="title_activity_activity_create_match">Create Match</string>
    <string name="title_activity_activity_bar_chart">Match Allocations</string>


</resources>
