<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/createReferee"
        android:icon="@mipmap/create"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/createReferee"/>

    <item
        android:id="@+id/createMatch"

        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/createMatch"/>

    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/exit"/>
</menu>
